# m2_kiosk_app

./: .gitignore  __init__.py  create_deb_package.sh  kiosk-app-test.py  m2-kiosk-app  m2-kiosk-app.desktop  m2-kiosk-app.xpm  m2_config.json  m2_config.txt  m2_config_template.json  m2_kiosk_app  m2_paypad_dbus.py  m2_transaction.py  m2_util.py  meson.build  paypad.glade  request_handlers.py  request_souptest.py  requirements.txt
DEBIAN/: control  postinst  postrm
json-url-reduced/: json-url-lzma.js  json-url-lzw.js  json-url-reduced.js  package.json  qrcode_m2.py
payment_types/: __init__.py  gamechanger.py  nft_storage.py
payment_validators/: __init__.py  cardano_local_node.py  dummy.py  koios.py  test_koios.py
static/: m2-kiosk-app.xpm
